--- a/FormValidator/index.html
+++ b/FormValidator/index.html
@@ -11,19 +11,24 @@
   <div class="container">
     <form id="form" class="form">
       <h2>Register With Us</h2>
-      <div class="form-control">
-        <label for="email">Email</label>
-        <input type="text" id="Email" placeholder="Enter email" />
-        <small>Error Message</small>
-      </div>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter your username" />
+          <small>Error Message</small>
+        </div>
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input type="text" id="Email" placeholder="Enter your email" />
+          <small>Error Message</small>
+        </div>
       <div class="form-control">
         <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Enter password" />
+        <input type="password" id="password" placeholder="Enter your password" />
         <small>Error Message</small>
       </div>
       <div class="form-control">
         <label for="password2">Confirm password</label>
-        <input type="text" id="password2" placeholder="Confirm password" />
+        <input type="text" id="password2" placeholder="Confirm your password" />
         <small>Error Message</small>
       </div>
       <button>Submit</button>
