--- a/FormValidator/index.html
+++ b/FormValidator/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <form id="form" class="form">
-      <h2>Register With Us</h2>
+      <h2>Register With Us</h2> 
         <div class="form-control">
           <label for="username">Username</label>
           <input type="text" id="username" placeholder="Enter your username" />
@@ -28,10 +28,10 @@
       </div>
       <div class="form-control">
         <label for="password2">Confirm password</label>
-        <input type="text" id="password2" placeholder="Confirm your password" />
+        <input type="password" id="password2" placeholder="Confirm your password" />
         <small>Error Message</small>
       </div>
-      <button>Submit</button>
+      <button type="submit">Submit</button>
     </form>
   </div>
   <script src="script.js"></script>
