--- a/FormValidator/index.html
+++ b/FormValidator/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="form-control">
           <label for="email">Email</label>
-          <input type="text" id="Email" placeholder="Enter your email" />
+          <input type="text" id="email" placeholder="Enter your email" />
           <small>Error Message</small>
         </div>
       <div class="form-control">
@@ -36,4 +36,4 @@
   </div>
   <script src="script.js"></script>
 </body>
-</html>
+</html>   
