--- a/MovieSiteBooking/index.html
+++ b/MovieSiteBooking/index.html
@@ -13,25 +13,22 @@
     <select id="movie">
       <option value="10">Avengers Endgame - $10</option>
       <option value="12">Joker - $12</option>
-      <option value="8">Toy Story 4 - $5</option>
+      <option value="8">Toy Story 4 - $8</option>
       <option value="9">The Lion King - $9</option>
     </select>
   </div>
   <ul class="showcase">
     <li>
-      <div class="seat">
-        <small>N/A</small>
-      </div>
+      <div class="seat"></div>
+      <small>N/A</small>
     </li>
     <li>
-      <div class="seat selected">
+      <div class="seat selected"></div>
         <small>Selected</small>
-      </div>
     </li>
     <li>
-      <div class="seat occupied">
-        <small>Occupied</small>
-      </div>
+      <div class="seat occupied"></div>
+      <small>Occupied</small>
     </li>
   </ul>
   <div class="container">
@@ -99,7 +96,7 @@
   </div>
   <p class="text">
     You have selected <span id="count">0</span> 
-    seats for a proce of <span id="total">0</span>
+    seats for a price of $<span id="total">0</span>
   </p>
   <script src="script.js"></script>
 </body>
